<resources>
    <string name="app_name">创意说</string>

    <string name="tab1">首页</string>
    <string name="tab2">发现</string>
    <string name="tab3">创作</string>
    <string name="tab4">动态</string>
    <string name="tab5">我的</string>
    <string name="connect_error">网络连接失败,请检查网络</string>
    <string name="connect_timeout">连接超时,请稍后再试</string>
    <string name="bad_network">服务器异常</string>
    <string name="parse_error">解析服务器响应数据失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="response_return_error">服务器返回数据失败</string>

    <string name="praise_notification">欣赏通知</string>
    <string name="system_notification">系统通知</string>
    <string name="other_notification">作者相关通知</string>
    <string name="phone_number">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="quickly_login">社交账号快捷登陆</string>
    <string name="new_user_register">新用户注册</string>
    <string name="login_matter">《用户协议》</string>
    <string name="confirm_password">请确认密码</string>
    <string name="register">注册</string>
    <string name="pen_name">笔名：</string>
    <string name="motto">格言：</string>
    <string name="sex">性别：</string>
    <string name="complete_register">完成注册</string>
    <string name="identify_code">请输入验证码</string>
    <string name="confirm">确定</string>
    <string name="next_step">下一步</string>
    <string name="share">创意说</string>
    <string name="publish">发布</string>


    <string name="login_with_wechat">用微信登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>

    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="ok">确定</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="collect">收藏</string>
    <string name="value">欣赏值</string>
    <string name="mine">我的</string>
    <string name="my_join">我参与的作品</string>
    <string name="my_opus">我原创的作品</string>
    <string name="my_draft">我的草稿</string>
    <string name="my_wallet">我的钱包</string>
    <string name="read_setting">阅读设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="system_setting">系统设置</string>
    <string name="clean_cache">清除缓存</string>
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>

    <string name="advice">意见反馈</string>
    <string name="advice_describe">产品正在成长期，很渴望每一位用户的建议</string>
    <string name="protocol">协议相关</string>
    <string name="protocol_describe">用户协议，隐私声明，免责声明</string>
    <string name="about_us_describe">《创意说》渴望每个志同道合的人加入我们</string>
    <string name="current_version_code">当前版本号：</string>
    <string name="my_start_opus">我发起的作品</string>
    <string name="author_resume">作者简介：</string>
    <string name="birthday">生日：</string>
    <string name="address">地址：</string>
    <string name="submit">提交</string>
    <string name="input_phone">请输入联系方式（选填）</string>
    <string name="input_advice">请输入遇到的问题或建议</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="label_ok">确定</string>
    <string name="label_cancel">取消</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="label_select_picture">选择图片</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="password_can_not_empty">密码不能为空</string>
    <string name="password_length_must_more_than_6">密码长度不能小于六位</string>
    <string name="password_not_same">两次密码输入不一致</string>
    <string name="illegal_argument">参数异常</string>
    <string name="send_vertify_code_success">验证码已发送至您的手机</string>
    <string name="write_must_know">注：支持原创，杜绝抄袭、非法转载、色情文字图片、广告等</string>
    <string name="is_can_renew">是否允许被续写</string>
    <string name="is_can_override">是否允许被重写</string>
    <string name="opus_brief">作品简介</string>
    <string name="opus_label">作品标签</string>
    <string name="opus_name">请输入作品名称</string>
    <string name="add_a_picture">请添加一个图片</string>
    <string name="height_width">720*1080</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>

    <string name="about_us_content">
        <p>《创意说》是开封万卷网络科技有限公司旗下的一个创意的阅读与写作的APP。哦，其实公司目前就这一个产品，确切的说是先有的创意说，再有的万卷网络科技有限公司（这样写，被老大看见会不会被打，不管了，哈哈），</p>
        <p>万卷科技，取名源自，读书破万卷，下笔如有神，和读万卷书，行万里路。当然我还是喜欢，读书破万卷，下笔如有你。创意说，则是简单明了，就就是创意小说的意思。</p>
        <p>目前公司规模还比较小，甚至部分员工还没大学毕业，但这是一群热爱阅读写作，热爱生活的孩子。梦想着创建文学界的b站，给大家一个没有任何门槛的完全免费的文学交流平台。</p>
        <p>如果您想找创意说发起人聊聊人生聊聊写作与阅读,请联系：</p>
        <p> TEL：15736883235（韩博）</p>
        <p> 邮件：yonghuzuimei@cypoem.com</p>
        <p> 如果您对《创意说》有什么好的意见与建议，请联系：</p>
        <p> TEL：15736883235（韩博）</p>
        <p> 邮件：yonghuzuimei@cypoem.com</p>
        <p> 如果您想加入创意说的大家庭，请联系：</p>
        <p> TEL：15736883235（韩博）</p>
        <p> 邮件：yonghuzuimei@cypoem.com</p>
        <p> 如果您有什么商业合作，请联系：</p>
        <p> TEL：15736883235（韩博）</p>
        <p> 邮件：yonghuzuimei@cypoem.com</p>
        <p> CEO其实也是有客服的功能的:-D</p>
        <p> 《创意说》作者交流qq群：631146727</p>
        <p> 邮箱：yonghuzuimei@cypoem.com</p>
        <p> 官方网站：www.cypoem.com</p>
    </string>
    <string name="opus_describe">请输入作品描述</string>
    <string name="search_hint">搜索圈子、故事、或人</string>
    <string name="loading">正在加载</string>
    <string name="no_data">暂无数据</string>
    <string name="clear_history">清空历史</string>
    <string name="chapter_title">请输入章节标题</string>
    <string name="is_can_be_rewrite">是否允许被重写</string>
    <string name="rewrite_explain">关闭意味着此文章会在本章结束</string>
    <string name="start_write">开始创作</string>
    <string name="article_content">这里是文章内容...</string>
    <string name="write_complete">完成创作</string>
    <string name="select_head_pic">您还没有选择头像哦</string>
    <string name="input_pen_name">给自己起个笔名吧</string>
    <string name="safe_setting">安全设置</string>
    <string name="phone_num">手机号</string>
    <string name="update_password">修改密码</string>
    <string name="zero">0</string>
    <string name="continue_write">续写</string>
    <string name="rewrite">重写</string>
    <string name="like_value">欣赏值</string>
    <string name="like">赞</string>
    <string name="comment">评论</string>
    <string name="add_a_sign">给自己添加一条格言吧</string>
    <string name="input_old_psw">请输入原密码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="had_registered">您的手机号已经注册过了哦</string>
    <string name="phone_can_not_null">手机号不能为空</string>
    <string name="input_correct_phone_num">请输入正确的手机号</string>
    <string name="input_identify_code">请输入验证码</string>
    <string name="writing_explain">创作说明</string>
    <string name="create_Opus">创作一个新的作品</string>
    <string name="join_opus">参与已有作品创作</string>
    <string name="newest">最新</string>
    <string name="hottest">最热</string>
    <string name="create_circle">创建圈子</string>
    <string name="circle_describe">你喜欢的人和故事都在这里</string>
    <string name="create_public_story">创建共创体故事</string>
    <string name="public_story_describe">我写出开头却写不出结尾</string>
    <string name="create_everyday_sentence">创建每日一句</string>
    <string name="everyday_sentence_describe">分享你的，聆听他的</string>
    <string name="create_personal_story">创建个人故事</string>
    <string name="forget_password">忘记密码？</string>
    <string name="modify_head_pic">点击修改头像</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="circle_of_me">我创建的圈子</string>
</resources>
