<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.cypoem.idea.activity.SuggestActivity">

    <EditText
        android:id="@+id/et_advice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mp_150"
        android:background="@color/edit_background"
        android:gravity="top"
        android:textColorHint="@color/text_hint"
        android:paddingStart="@dimen/mp_15"
        android:paddingEnd="@dimen/mp_15"
        android:hint="@string/input_advice"
        android:maxLength="200"
        android:paddingTop="@dimen/mp_15" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mp_50"
        android:hint="@string/input_phone"
        android:background="@color/edit_background"
        android:paddingStart="@dimen/mp_15"
        android:textColorHint="@color/text_hint"
        android:paddingEnd="@dimen/mp_15"
        android:layout_marginTop="@dimen/mp_20"
        android:textSize="@dimen/f_16"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_login"
        android:gravity="center"
        android:text="@string/submit"
        android:layout_marginStart="@dimen/mp_15"
        android:layout_marginEnd="@dimen/mp_15"
        android:textColor="@color/white"
        android:textSize="@dimen/f_18" />
</LinearLayout>
