<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/mp_15"
    android:paddingEnd="@dimen/mp_15"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/mp_50"
        android:src="@drawable/camera"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mp_20"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pen_name"
            android:textColor="@color/green"
            android:textSize="@dimen/f_20"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mp_10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motto"
            android:textColor="@color/green"
            android:textSize="@dimen/f_20"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mp_15"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/green"
            android:textSize="@dimen/f_20"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mp_20"
            android:src="@drawable/male"/>
        <SeekBar
            android:layout_width="@dimen/mp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mp_20"
            android:src="@drawable/female"/>

        <ProgressBar
            android:layout_width="@dimen/mp_30"
            android:layout_height="@dimen/mp_30"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="@dimen/f_18"
        android:text="@string/complete_register"
        android:background="@drawable/bg_btn_login"/>

</LinearLayout>
